GET -> POST, csrf

--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -8,22 +8,23 @@
       Калькулятор ожидания дня рождения
     </div>
     <div class="card-body">
-      <form>
+      <form method="post">
+        {% csrf_token %}      <!-- Без тегa csrf_token POST-запрос будет отклонён. -->
         {% bootstrap_form form %}
         {% bootstrap_button button_type="submit" content="Отправить" %}
       </form>
     </div>
   </div>
-  {% with data=request.GET %}         <!-- Присваиваем переменной data объект request.GET -->
-    {% if form.is_valid %}           <!-- В дальнейшем используем имя data вместо request.GET -->  
-                                    <!-- ИЗМЕНИЛИ data на ВАЛИД, чтобы приветствие появлялось только при полностью валидных данных.-->  
-      
+  {% with data=form.instance %}         <!-- Присваиваем переменной data объект request.GET / ЗАМЕНА: request.GET-> request.POST-> form.instance -->
+    {% if form.is_valid %}           <!-- В дальнейшем используем имя data вместо request.GET -->  <!-- ИЗМЕНИЛИ data на ВАЛИД, чтобы приветствие появлялось только при полностью валидных данных.-->  
+      ID новой записи в БД: {{ data.id }} <!-- Получить id объекта -->
+    <hr>
     <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
       {% if birthday_countdown == 0 %}      <!-- СЧЁТЧИК ДО ДР Если до дня рождения 0 дней... -->
-        С днём рождения!        <!-- ...выводим поздравление: -->
+        <p>С днём рождения!</p>        <!-- ...выводим поздравление: -->
       {% else %}
     
-        Осталось дней до дня рождения: {{ birthday_countdown }}!         <!-- ...сообщаем, сколько осталось ждать: -->
+        <p>Осталось дней до дня рождения: {{ birthday_countdown }}!</p>         <!-- ...сообщаем, сколько осталось ждать: -->
       {% endif %}
     {% endif %}
     <!-- Когда заканчивается область шаблона, где нужна переменная,  закрываем тег with ПЕРЕМЕННАЯ УБРАНА -->
